<resources>

    <string name="app_name">LiveShop</string>
    <string name="facebook_app_id">1749600988638663</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="favorites">Favorites</string>
    <string name="friends">Friends</string>
    <string name="sign_out">Sign out</string>
    <string name="liveshop_sign_in">LiveShop - Sign in</string>
    <string name="home">Home</string>
    <string name="account">Account</string>
    <string name="loading">Loading&#8230;</string>
    <string name="sign_out_title">Sign out</string>
    <string name="sign_out_message">Are you sure you wish to sign out?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="google_sign_in_success">Google sign in success!</string>
    <string name="google_sign_in_failed">Google sign in failed!</string>
    <string name="facebook_sign_in_success">Facebook sign in success!</string>
    <string name="facebook_sign_in_failed">Facebook sign in failed!</string>
    <string name="facebook_sign_in_canceled">Facebook sign in canceled!</string>

</resources>
