<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/home" />
        <item
            android:id="@+id/nav_favorites"
            android:icon="@drawable/ic_favorite"
            android:title="@string/favorites" />
        <item
            android:id="@+id/nav_friends"
            android:icon="@drawable/ic_people"
            android:title="@string/friends" />
    </group>
    <item android:title="@string/account">
        <menu>
            <item
                android:id="@+id/nav_sign_out"
                android:icon="@drawable/ic_lock_open"
                android:title="@string/sign_out" />
        </menu>
    </item>

</menu>
